--- a/InternetShop/Views/Home/Auth.cshtml
+++ b/InternetShop/Views/Home/Auth.cshtml
@@ -3,5 +3,14 @@
     ViewBag.Title = "Auth";
 }
 
-<li>@Html.ActionLink("ГГГВП", "Admin", "Home")</li>
+<div id="auth">
+    <form method="Post"  action='/Home/Goods' >
+        <p>Введите Логин:</p>
+        <input type="text" name="login">
+        <p>Введите пароль:</p>
+        <input type="password" name="password">
+        <br/>
+        <input type="submit" name="okbutton" value="Авторизоваться"/>
+    </form>
+</div>
 
