--- a/InternetShop/Views/Shared/_LayoutAdmin.cshtml
+++ b/InternetShop/Views/Shared/_LayoutAdmin.cshtml
@@ -15,7 +15,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-
+                    <span class="icon-bar"></span>
                 </button>
                 <!--  @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                 -->
@@ -24,6 +24,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Товары", "Goods", "Home")</li>
                     <li>@Html.ActionLink("Заказы", "Orders", "Home")</li>
+                    <li>@Html.ActionLink("Выйти", "Index", "Home")</li>
                 </ul>
             </div>
         </div>
