--- a/InternetShop/Views/Shared/_LayoutAdmin.cshtml
+++ b/InternetShop/Views/Shared/_LayoutAdmin.cshtml
@@ -31,8 +31,11 @@
     </div>
     <div class="container body-content">
         @RenderBody()
+    </div>
+    
+    <div class="container">
         <hr />
-        <footer>
+        <footer>   
             <p>&copy; @DateTime.Now.Year – Z&K</p>
         </footer>
     </div>
