--- a/InternetShop/Views/Home/Goods.cshtml
+++ b/InternetShop/Views/Home/Goods.cshtml
@@ -1,17 +1,34 @@
-﻿
+﻿@model IEnumerable<InternetShop.Models.Good>
 @{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    int i = 0;
+    int len = 0;
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Goods</title>
-</head>
-<body>
-    <div> 
+<a href="@Url.Action("Select", "Home", new { id = 0})">
+    <div id="liniya">
+        <p><img id="imgGood" src="/img/add.png"></p>
+        <p id="word">Нажмите для добавления нового товара.</p>
     </div>
-</body>
-</html>
+</a>
+
+@foreach (var item in Model)
+{
+    <a href="@Url.Action("Select", "Home", new { id = item.Id })">
+        <div id="liniya">
+            <p><img id="imgGood" src="@item.Image"></p>
+            <p>Название товара:</p><p> @item.Name</p>
+            @{
+                len = @item.Description.Length;
+            }
+            Описание: <p id="word">@item.Description.Substring(0, 20 > len ? len : 20)</p>
+            <p>Количество: @item.Count</p>
+            <p>Стоимость: @item.Price</p>
+        </div>
+    </a>
+                i++;
+                if (i % 3 == 0)
+                {
+        <div id="separ"></div>
+    }
+}
