--- a/InternetShop/Views/Home/Auth.cshtml
+++ b/InternetShop/Views/Home/Auth.cshtml
@@ -4,12 +4,13 @@
 }
 
 <div id="auth">
-    <form method="Post"  action='/Home/Goods' >
+    <form method="Post"  action='/Admin/Goods' >
         <p>Введите Логин:</p>
         <input type="text" name="login">
         <p>Введите пароль:</p>
         <input type="password" name="password">
-        <br/>
+        <br />
+        <br />
         <input type="submit" name="okbutton" value="Авторизоваться"/>
     </form>
 </div>
