--- a/InternetShop/Views/Shared/_LayoutAdmin.cshtml
+++ b/InternetShop/Views/Shared/_LayoutAdmin.cshtml
@@ -22,8 +22,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Товары", "Goods", "Home")</li>
-                    <li>@Html.ActionLink("Заказы", "Orders", "Home")</li>
+                    <li>@Html.ActionLink("Товары", "Goods", "Admin")</li>
+                    <li>@Html.ActionLink("Заказы", "Orders", "Admin")</li>
                     <li>@Html.ActionLink("Выйти", "Index", "Home")</li>
                 </ul>
             </div>
