--- a/InternetShop/Views/Home/Index.cshtml
+++ b/InternetShop/Views/Home/Index.cshtml
@@ -1,10 +1,27 @@
 ﻿@model IEnumerable<InternetShop.Models.Good>
 @{
     ViewBag.Title = "Home Page";
+    int i = 0;
+    int len = 0;
 }
 
-<h1>ddddd</h1>
 @foreach (var item in Model)
 {
-    <h1>@item.Count</h1>
+    <a href="@Url.Action("Select", "Home", new { id = item.Id })">
+        <div id="liniya">
+            <p><img id="imgGood" src="@item.Image"></p>
+            <p>Название товара:</p><p> @item.Name</p>
+            @{
+                len = @item.Description.Length;
+            }
+            Описание: <p id="word">@item.Description.Substring(0, 20 > len ? len : 20)</p>
+            <p>Количество: @item.Count</p>
+            <p>Стоимость: @item.Price</p>
+        </div>
+    </a>
+                i++;
+                if (i % 3 == 0)
+                {
+                    <div id="separ"></div>
+                }
 }
