--- a/InternetShop/Views/Home/Select.cshtml
+++ b/InternetShop/Views/Home/Select.cshtml
@@ -1,27 +1,23 @@
 ﻿@model InternetShop.Models.Good
 @{
     ViewBag.Title = "Good";
-    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-</br>
-<form method="Post" action="@Url.Action("Success", "Home", new { id = Model.Id })">
-    <p>Название</p>
-    <p>
-        <input name="name" value="@Model.Name">
-    </p>
-    <p>Описание</p>
-    <p>
-        <textarea name="description" cols="40" rows="10">@Model.Description</textarea>
-    </p>
-    <p>Стоимость</p>
-    <p>
-        <input type="number" name="price" value="@Model.Price" min="1" max="1000000" step="1">
-    </p>
-    <p>Количество</p>
-    <p>
-        <input type="number" name="count" value="@Model.Count" min="1" max="100000" step="1">
-    </p>
-    <p>
-        <input type="submit" value="Отправить">
-    </p>
-</form>
+
+
+<div class="well">
+    <img src="@Model.Image">
+    <h3>
+        <strong>@Model.Name</strong>
+        <span class="pull-right label label-primary">@Model.Price.ToString("# руб")</span>
+    </h3>
+    @using (Html.BeginForm("AddToCart", "Cart"))
+    {
+        <div class="pull-right">
+            @Html.HiddenFor(x => x.Id)
+            @Html.Hidden("returnUrl", Request.Url.PathAndQuery)
+            <input type="submit" class="btn btn-success" value="Добавить в корзину" />
+        </div>
+    }
+    <span class="lead">@Model.Description</span>
+</div>
