--- a/InternetShop/Views/Shared/_Layout.cshtml
+++ b/InternetShop/Views/Shared/_Layout.cshtml
@@ -16,15 +16,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
                 </button>
               <!--  @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             --></div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Корзина", "Index", "Home")</li>
-                    <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакты", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Корзина", "Index", "Cart")</li>
                     <li>@Html.ActionLink("Войти", "Auth", "Home")</li>
                 </ul>
 
@@ -33,6 +32,9 @@
     </div>
     <div class="container body-content">
         @RenderBody()
+    </div>
+
+    <div class="container">
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year – Z&K</p>
