--- a/InternetShop/Views/Cart/Index.cshtml
+++ b/InternetShop/Views/Cart/Index.cshtml
@@ -31,7 +31,7 @@
                     @((line.Quantity * line.good.Price).ToString("# руб"))
                 </td>
                 <td>
-                    @using (Html.BeginForm("RemoveFromCart", "Cart", new { Id = line.good.Id}))
+                    @using (Html.BeginForm("RemoveFromCart", "Cart", new { Id = line.good.Id }))
                     {
                         @Html.Hidden("Id", line.good.Id)
                         @Html.HiddenFor(x => x.ReturnUrl)
@@ -54,4 +54,5 @@
 
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Продолжить покупки</a>
+    @Html.ActionLink("Оформить заказ", "Checkout", new { cart = @Model.Cart}, new { @class = "btn btn-primary" })
 </div>
