Исправлен стилья для цены товара.

--- a/InternetShop/Views/Admin/Goods.cshtml
+++ b/InternetShop/Views/Admin/Goods.cshtml
@@ -8,7 +8,8 @@
 <a href="@Url.Action("Select", "Admin", new { id = 0})">
     <div id="liniya">
         <p><img id="imgGood" src="/img/add.png"></p>
-        <p id="word">Нажмите для добавления нового товара.</p>
+        <p id="word">Нажмите для добавления <br/> нового товара</p>
+        <br/>
     </div>
 </a>
 
