--- a/InternetShop/Views/Shared/_Layout.cshtml
+++ b/InternetShop/Views/Shared/_Layout.cshtml
@@ -21,9 +21,11 @@
             --></div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Корзина", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Контакты", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Корзина", "Index", "Cart")</li>
+                    <li>@Html.ActionLink("Товары", "Index", "Home")</li>
+               <!--
+                   <li>@Html.ActionLink("Контакты", "Contact", "Home")</li>
+               -->     
+                   <li>@Html.ActionLink("Корзина", "Index", "Cart")</li>
                     <li>@Html.ActionLink("Войти", "Auth", "Home")</li>
                 </ul>
 
