--- a/InternetShop/Views/Cart/Index.cshtml
+++ b/InternetShop/Views/Cart/Index.cshtml
@@ -53,6 +53,6 @@
 </table>
 
 <div class="text-center">
-    <a class="btn btn-primary" href="@Model.ReturnUrl">Продолжить покупки</a>
+    <a class="btn btn-primary" href="/Home/">Продолжить покупки</a>
     @Html.ActionLink("Оформить заказ", "Checkout", new { cart = @Model.Cart}, new { @class = "btn btn-primary" })
 </div>
