--- a/InternetShop/Views/Home/Cart.cshtml
+++ b/InternetShop/Views/Home/Cart.cshtml
@@ -38,5 +38,5 @@
 </table>
 
 <div class="text-center">
-    <a class="btn btn-primary" href="@Model.ReturnUrl">Продолжить покупки</a>
+    <a class="btn btn-primary" href="`/Home/">Продолжить покупки</a>
 </div>
